# torrent-rust-cli

./: .clinerules  .gitignore  Cargo.toml  b.txt  prompt.txt  tracker_list.txt
.github/workflows/: ci.yml
Prompts/: 20260629.205217_workspace_setup_and_common_crates_plan.md  20260629.205217_workspace_setup_and_common_crates_task.md  20260629.205217_workspace_setup_and_common_crates_walkthrough.md  20260629.205728_github_actions_ci_plan.md  20260629.205728_github_actions_ci_task.md  20260629.205728_github_actions_ci_walkthrough.md  20260629.211019_daemon_lifecycle_and_ipc_plan.md  20260629.211019_daemon_lifecycle_and_ipc_task.md  20260629.211019_daemon_lifecycle_and_ipc_walkthrough.md  20260629.214420_torrent_parser_plan.md  20260629.214420_torrent_parser_task.md  20260629.214420_torrent_parser_walkthrough.md  20260629.225404_download_engine_plan.md  20260629.225404_download_engine_task.md  20260629.225404_download_engine_walkthrough.md  20260630.111654_write_block_fix.md  20260630.112545_file_size_fix.md  20260630.113611_existing_file_truncation.md  20260630.114330_magnet_support_plan.md  20260630.144847_magnet_name_and_udp.md  20260630.144848_prompt_log_reminder.md  20260630.155108_metadata_fetch_failure.md  20260630.155227_metadata_peer_failure.md  20260630.155805_ci_fmt_question.md  20260630.161220_metadata_peer_failure_2.md  20260630.163014_metadata_peer_failure_3.md  20260630.163313_restore_magnet_crash.md  20260630.163902_timeout_all_peers.md  20260630.184504_magnet_fixes.md  20260630.210829_peers_count.md  20260630.211416_write_frequency.md  20260630.211724_json_config.md  20260630.222618_version_command_git.md  20260630.223541_verify_pieces_bug.md  20260630.224634_duplicate_pieces_bug.md  20260630.225745_partial_piece_progress.md  20260630.231026_remove_json_progress.md  20260630.231415_checking_status.md  20260701.001153_fix_stalled_peers.md  20260701.003336_ui_rounding_bug.md  (+14 more)
crates/: trackers.txt
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: bencode.rs  lib.rs  magnet.rs  meta.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: creator.rs  engine.rs  magnet_worker.rs  main.rs  server.rs
crates/dht/: Cargo.toml
crates/dht/src/: lib.rs
crates/peer/: Cargo.toml
crates/peer/src/: lib.rs  protocol.rs
crates/piece/: Cargo.toml
crates/piece/src/: lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs  transport.rs
crates/rpc/tests/: ipc_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tracker/: Cargo.toml
crates/tracker/src/: lib.rs
