[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/daemon",
    "crates/cli",
    "crates/rpc",
    "crates/storage",
    "crates/tracker",
    "crates/dht",
    "crates/peer",
    "crates/piece",
    "crates/config",
]

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
sha1 = "0.10"
bitvec = "1.0"
toml = "0.8"

# Internal workspace dependency definitions
torrent-core = { path = "crates/core" }
torrent-config = { path = "crates/config" }
torrent-piece = { path = "crates/piece" }
torrent-rpc = { path = "crates/rpc" }
torrent-storage = { path = "crates/storage" }
torrent-tracker = { path = "crates/tracker" }
torrent-dht = { path = "crates/dht" }
torrent-peer = { path = "crates/peer" }
