[package]
name = "torrentd"
version = "0.1.0"
edition = "2021"

[dependencies]
torrent-core = { path = "../core" }
torrent-config = { path = "../config" }
torrent-piece = { path = "../piece" }
torrent-rpc = { path = "../rpc" }
torrent-storage = { path = "../storage" }
torrent-tracker = { path = "../tracker" }
torrent-dht = { path = "../dht" }
torrent-peer = { path = "../peer" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
thiserror.workspace = true
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
